# recipes

./: .gitignore  .gitlab-ci.yml  .gitmodules  0001-working-on-getting-the-double-to-display-and-scale-p.patch  Makefile.am  README.md  TODO  autogen.sh  build-bundle.sh  configure.ac  make-pot  make_release.sh  meson.build  meson_options.txt  meson_post_install.py  org.gnome.Recipes.flatpak.json  recipes.doap  types.c.template
data/: Makefile.am  chefs.db  chefs.db.h  ingredients.list  meson.build  org.gnome.Recipes-mime.xml  org.gnome.Recipes.desktop.in  org.gnome.Recipes.desktop.in.in  org.gnome.Recipes.gschema.xml  org.gnome.Recipes.search-provider.ini.in  org.gnome.Recipes.service  org.gnome.Recipes.service.in  org.gnome.recipes.gschema.xml  picks.db  recipes.db  recipes.db.h  segments.list
data/appdata/: org.gnome.Recipes.appdata.xml  org.gnome.Recipes.appdata.xml.in  org.gnome.Recipes.appdata.xml.in.in
data/images/: hugh
flatpak/: 0001-Try-to-fit-in-a-sandbox.patch  README.md  build-bundle.sh  gnome-recipes.flatpakref  org.gnome.Recipes-devel.json  org.gnome.Recipes-mr.json  org.gnome.Recipes-mr.yml  org.gnome.Recipes.json
help/: LINGUAS  Makefile.am  meson.build
help/C/: add-recipe-description.page  add-recipe-details.page  add-recipe-directions.page  add-recipe-images.page  add-recipe-ingredients.page  add-recipe.page  chef.page  common-problems.page  contribute.page  cooking.page  find-recipe.page  index.page  notes.page  share.page  shop.page
help/cs/: cs.po
help/de/: de.po
help/es/: es.po
help/fr/: fr.po
help/ko/: ko.po
help/pl/: pl.po
help/sv/: sv.po
help/uk/: uk.po
osx/: Info.plist  README.md  build-osx-installer.sh  gnome-recipes.sh  org.gnome.Recipes.bundle  org.gnome.Recipes.icns
po/: LINGUAS  Makevars  POTFILES.in  POTFILES.skip  ar.po  ca.po  cs.po  de.po  el.po  en_GB.po  es.po  eu.po  fi.po  fr.po  fr_FR.po  fur.po  hi.po  hr.po  hu.po  id.po  ka.po  kab.po  ko.po  meson.build  nb.po  nl.po  pl.po  pt_BR.po  ru.po  sk.po  sl.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po  zh_TW.po
po-data/: LINGUAS  Makevars  POTFILES.in  POTFILES.skip  ar.po  cs.po  de.po  el.po  es.po  eu.po  fr.po  fur.po  gnome-recipes-data.pot  hu.po  id.po  meson.build  nl.po  pl.po  pt_BR.po  sl.po  sr.po  sv.po  uk.po  zh_CN.po
src/: Makefile.am  category.css  chef-conflict-dialog.ui  cuisine.css  cuisine.css.in  gr-about-dialog.c  gr-about-dialog.h  gr-account.c  gr-account.h  gr-app.c  gr-app.css  gr-app.gresource.xml  gr-app.h  gr-appdata.c  gr-appdata.h  gr-author.c  gr-author.h  gr-big-cuisine-tile.c  gr-big-cuisine-tile.h  gr-big-cuisine-tile.ui  gr-category-tile.c  gr-category-tile.h  gr-category-tile.ui  gr-category.c  gr-category.h  gr-chef-dialog.c  gr-chef-dialog.h  gr-chef-dialog.ui  gr-chef-tile.c  gr-chef-tile.h  gr-chef-tile.ui  gr-chef.c  gr-chef.h  gr-convert-units.c  gr-convert-units.h  gr-cooking-page.c  gr-cooking-page.h  gr-cooking-page.ui  gr-cooking-view.c  gr-cooking-view.h  (+173 more)
subprojects/: libgd.wrap
subprojects/libgd/libgd/: gd-main-icon-box-child.c  gd-main-icon-view.c  gd-two-lines-renderer.c  meson.build
tests/: Makefile.am  convert.c  ids.c  ingredients-test.c  ingredients.c  meson.build  number.c  strv.c  unit.c
tests/convert-data/: convert1.expected  convert1.in
tests/data/: valid-1.expected  valid-1.in  valid-2.expected  valid-3.expected  valid-3.in  valid-4.expected  valid-5.expected  valid-5.in
tests/id-data/: ids.expected  ids.in
tests/ingredients-data/: valid-1.expected  valid-1.in  valid-2.expected  valid-2.in  valid-3.expected  valid-3.in  valid-4.expected  valid-4.in
tests/number-data/: number1.expected  number1.in
tests/unit-data/: unit1.expected  unit1.in
tools/: Makefile.am  meson.build  meson_post_install.py  recipe-extract.c
