@YELP_HELP_RULES@
HELP_ID = org.gnome.Recipes

HELP_MEDIA = \
	images/down.png \
	images/love.png \
	images/Recipes.png \
	images/rotate-left.png \
	images/rotate-right.png \
	images/search.png \
	images/star.png \
	images/trash.png

HELP_FILES = \
	add-recipe-description.page \
	add-recipe-details.page \
	add-recipe-directions.page \
	add-recipe-ingredients.page \
	add-recipe.page \
	chef.page \
	common-problems.page \
	contribute.page \
	cooking.page \
	find-recipe.page \
	index.page \
	legal.xml \
	notes.page \
	share.page \
	shop.page

HELP_LINGUAS = de ko sv
